trunk/Archive2/b7/b57a2578c9d5ee/output
main.cpp:27:17: error: out-of-line definition of 'setCourseName' does not match any declaration in 'GradeBook'
void GradeBook::setCourseName() const
                ^~~~~~~~~~~~~
main.cpp:29:18: error: use of undeclared identifier 'name'
    courseName = name;
                 ^
main.cpp:37:17: error: out-of-line definition of 'setInstructorName' does not match any declaration in 'GradeBook'
void GradeBook::setInstructorName() const
                ^~~~~~~~~~~~~~~~~
main.cpp:39:22: error: use of undeclared identifier 'name'
    instructorName = name;
                     ^
main.cpp:48:83: error: reference to non-static member function must be called; did you mean to call it with no arguments?
    cout << "Welcome to the grade book for\n" << getCourseName() << "with"     << getInstructorName << "!" << endl;
                                                                                  ^~~~~~~~~~~~~~~~~
                                                                                                   ()
5 errors generated.
